# gh-difftool

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
scripts/: build_dist.h  build_dist.sh
src/: change_set.rs  cmd.rs  diff.rs  gh_interface.rs  git_config.rs  main.rs  patch.rs
tests/: name_only.rs  rotate_to.rs  skip_to.rs
