[package]
name = "gh-difftool"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "env"] }
displaydoc = "0.2.4"
futures = { version = "0.3.30", default_features = false, features = ["alloc"]}
gix-config = "0.36.0"
once_cell = "1.19.0"
parse_link_header = "0.3.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
which = "6.0.1"
base64 = "0.21.7"

[dev-dependencies]
assert_cmd = "2.0.14"
httpmock = "0.7.0"
mockall = "0.12.1"
temp_testdir = "0.2.3"
textwrap = "0.16.1"
yare = "3.0.0"


# Need to give credit to https://github.com/johnthagen/min-sized-rust for these
# options to help reduce the binary size. Knocked off about 66% of the size with
# these options
[profile.release]
opt-level = 'z'     
lto = true          
codegen-units = 1   
panic = 'abort'     
strip = true        
