[package]
name = "gh-difftool"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4", features = ["derive", "env"] }
displaydoc = "0.2"
futures = { version = "0.3", default_features = false, features = ["alloc"]}
gix-config = "0.36"
once_cell = "1"
parse_link_header = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
url = "2"
which = "6"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.7"
mockall = "0.12"
temp_testdir = "0.2"
textwrap = "0.16"
yare = "3"


# Need to give credit to https://github.com/johnthagen/min-sized-rust for these
# options to help reduce the binary size. Knocked off about 66% of the size with
# these options
[profile.release]
opt-level = 'z'     
lto = true          
codegen-units = 1   
panic = 'abort'     
strip = true        
