[package]
name = "gh-difftool"
version = "1.2.2"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
displaydoc = "0.2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
gix-config = "0.45"
once_cell = "1"
parse_link_header = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
url = "2"
which = "7"
base64 = "0.22"
shlex = "1"

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.7"
mockall = "0.13"
temp_testdir = "0.2"
textwrap = "0.16"
yare = "3"


# Need to give credit to https://github.com/johnthagen/min-sized-rust for these
# options to help reduce the binary size. Knocked off about 66% of the size with
# these options
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
